--- a/presenter/style.css
+++ b/presenter/style.css
@@ -9,10 +9,12 @@
   font-size: 32px;
   color: #fff;
   text-shadow: 1px 2px 0 #000, 1px -2px 0 #000, -1px 2px 0 #000, -1px -2px 0 #000, 2px 1px 0 #000, 2px -1px 0 #000, -2px 1px 0 #000, -2px -1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, -1px -1px 0 #000;
+  text-align: left;
   overflow: hidden;
 }
 #niconicocoa .status {
   position: absolute;
+  width: 100%;
   bottom: 0;
   left: 0;
   margin: 0;
@@ -21,8 +23,8 @@
 #niconicocoa .comment {
   position: absolute;
   left: 100%;
+  width: 100%;
   margin: 0;
-  text-align: left;
   animation-name: textanime;
   animation-duration: 10s;
   animation-iteration-count: 1;
